--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,5 @@
             "src/*": ["./src/*"]
         }
     },
-    "include": ["./**/*.ts", "./**/*.tsx", "src/api_service.js"]
+    "include": ["./**/*.ts", "./**/*.tsx", "src/api_service.js", "src/index.js"]
 }
